AlbinMicroService.Gateway/Envoy/envoy.yaml
static_resources:
  clusters:
    - name: AlbinMicroService.Administration
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: AlbinMicroService.Administration
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: AlbinMicroService.Administration, port_value: 5000 }

    - name: AlbinMicroService.MasterData
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: AlbinMicroService.MasterData
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: AlbinMicroService.MasterData, port_value: 5001 }

    - name: AlbinMicroService.Users
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: AlbinMicroService.Users
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: AlbinMicroService.Users, port_value: 5002 }

  listeners:
    - name: AlbinEnvoyListener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: AlbinMicroService.Administration
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/admin-service" }
                          route: { cluster: AlbinMicroService.Administration }
                    - name: AlbinMicroService.MasterData
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/master-service" }
                          route: { cluster: AlbinMicroService.MasterData }
                    - name: AlbinMicroService.Users
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/users-service" }
                          route: { cluster: AlbinMicroService.Users }
                http_filters:
                  - name: envoy.filters.http.router
